Major Home Updates

--- a/Home.html
+++ b/Home.html
@@ -7,43 +7,29 @@
     <title>Your Name - Resume</title>
 </head>
 <body>
-    <header>
+    <header id="top-banner">
         <div class="container">
             <h1>Your Name</h1>
-            <p>Web Developer</p>
+            <nav>
+                <a href="education.html">Education</a>
+                <a href="certifications.html">Certifications</a>
+                <a href="recommendations.html">Recommendations</a>
+                <a href="experience.html">Work Experience</a>
+                <a href="accomplishments.html">Notable Accomplishments</a>
+            </nav>
         </div>
     </header>
 
-    <section id="education" class="container">
-        <h2>Education</h2>
-        <p>Your Degree - University/College Name - Graduation Year</p>
-    </section>
-
-    <section id="certifications" class="container">
-        <h2>Certifications</h2>
-        <p>Certification Name - Issuing Organization - Year</p>
-    </section>
-
-    <section id="recommendations" class="container">
-        <h2>Letters of Recommendation</h2>
-        <p>Include quotes or excerpts from recommendations.</p>
-    </section>
-
-    <section id="experience" class="container">
-        <h2>Work Experience</h2>
-        <p>Job Title - Company Name - Duration</p>
-        <p>Job Description and responsibilities.</p>
-    </section>
-
-    <section id="accomplishments" class="container">
-        <h2>Notable Accomplishments</h2>
-        <ul>
-            <li>Accomplishment 1</li>
-            <li>Accomplishment 2</li>
-            <!-- Add more as needed -->
-        </ul>
+    <section id="main-banner" class="container">
+        <!-- Add your image and description here -->
+        <img src="EthanBanner.jpg" alt="Ethan Biekert in front of a snowy landscape">
+        <div class="description">
+            <h2>About Me</h2>
+            <p>Your description goes here.</p>
+        </div>
     </section>
 
     <script src="script.js"></script>
 </body>
 </html>
+
