--- a/Home.html
+++ b/Home.html
@@ -24,7 +24,8 @@
         <!-- Add your image and description here -->
         <img src="EthanBanner.jpg" alt="Ethan Biekert in front of a snowy landscape">
         <div class="description">
-            <h2>About Me</h2>
+            <h2>Software Enginer - Web Designer - Student
+            </h2>
             <p>Your description goes here.</p>
         </div>
     </section>
