Description and Header Design

--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,8 @@
         <div class="description">
             <h2>Software Enginer - Web Designer - Student
             </h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so. This website was created by me from scratch, no templates.</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn 
+                who I am and how I came to be so. This website was created by me from scratch, no templates.</p>
         </div>
     </section>
 
