--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Ethan Biekert</title>
+    <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <header id="top-banner">
@@ -16,6 +17,7 @@
                 <a href="recommendations.html">Recommendations</a>
                 <a href="experience.html">Work Experience</a>
                 <a href="accomplishments.html">Notable Accomplishments</a>
+                <a href="WMMM.html">What Makes Me, Me</a>
             </nav>
         </div>
     </header>
