Home Page Updates

--- a/Home.html
+++ b/Home.html
@@ -10,14 +10,14 @@
 <body>
     <header id="top-banner">
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Ethan Biekert</h1>
             <nav>
                 <a href="education.html">Education</a>
                 <a href="certifications.html">Certifications</a>
                 <a href="recommendations.html">Recommendations</a>
                 <a href="experience.html">Work Experience</a>
                 <a href="accomplishments.html">Notable Accomplishments</a>
-                <a href="WMMM.html">What Makes Me, Me</a>
+                <a href="Goals.html">Goals and Aspirations</a>
             </nav>
         </div>
     </header>
