--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
 <body>
+    <h1>Ethan</h1>
     <header id="top-banner">
         <div class="container">
             
