--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
 
     <section id="main-banner" class="container">
         <!-- Add your image and description here -->
-        <img src="EthanBanner.jpg" alt="Ethan Biekert in front of a snowy landscape">
+        <!--<img src="EthanBanner.jpg" alt="Ethan Biekert in front of a snowy landscape">-->
         <div class="description">
             <h2>Software Enginer - Web Designer - Student
             </h2>
