--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
         <div class="description">
             <h2>Software Enginer - Web Designer - Student
             </h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so.</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so</p>
         </div>
     </section>
 
