adding div because im a dumbass and forgot to modify the html

--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
 <body>
-    
+    <div id="backgroud-image"></div>
     <header id="top-banner">
         <div class="container">
             
