--- a/Home.html
+++ b/Home.html
@@ -1,3 +1,4 @@
+<!--Start of HTML-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
 <body>
-    <div id="backgroud-image"></div>
+    <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
             
@@ -36,4 +37,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
+<!--End of HTML-->
