--- a/Home.html
+++ b/Home.html
@@ -25,14 +25,14 @@
     </header>
 
     <section id="main-banner" class="container">
-        <!-- Add your image and description here -->
-        <!--<img src="EthanBanner.jpg" alt="Ethan Biekert in front of a snowy landscape">-->
-        <div class="description">
-            <h2>Software Enginer - Web Designer - Student
-            </h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so.</p>
-        </div>
-    </section>
+    <!-- Add your image and description here -->
+    <div class="description">
+        <h2>Software Engineer - Web Designer - Student</h2>
+        <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so.</p>
+        <a href="Resume.pdf" download class="resume-button">Download Resume</a>
+    </div>
+</section>
+
 
     <script src="script.js"></script>
 </body>
