Maybe Hamburger menu?

--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-
+<!-- Updated HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +30,7 @@
     </header>
     
     <section id="main-banner" class="container">
-    
+        <!-- Add your image and description here -->
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so.</p>
