--- a/Home.html
+++ b/Home.html
@@ -39,6 +39,18 @@
     </section>
 
     <script src="script.js"></script>
+    <!-- Add this script to your HTML -->
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const hamburgerMenu = document.querySelector('.hamburger-menu');
+        const nav = document.querySelector('nav');
+
+        hamburgerMenu.addEventListener('click', function () {
+            nav.classList.toggle('show-nav');
+        });
+    });
+</script>
+
 </body>
 </html>
 
