--- a/Home.html
+++ b/Home.html
@@ -19,6 +19,7 @@
                 <div class="bar"></div>
             </div>
             <nav>
+                <div class="hamburger-menu">&#9776;</div>
                 <a href="education.html">Education</a>
                 <a href="certifications.html">Certifications</a>
                 <a href="recommendations.html">Recommendations</a>
