--- a/Home.html
+++ b/Home.html
@@ -18,9 +18,9 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <div class="hamburger-menu">&#9776;</div>
+            
             <nav>
-                
+                <div class="hamburger-menu">&#9776;</div>
                 <a href="education.html">Education</a>
                 <a href="certifications.html">Certifications</a>
                 <a href="recommendations.html">Recommendations</a>
@@ -35,7 +35,7 @@
         <!-- Add your image and description here -->
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and how I came to be so..</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
         </div>
     </section>
