--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="script" href="script.js">
     <title>Ethan Biekert</title>
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
@@ -29,7 +30,16 @@
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
-            <a href="experience.html" class="resume-button">Contact Me</a>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Contact Me</button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="#">Linkedin</a>
+                  <a href="#">Instagram</a>
+                  <a href="#">Indeed</a>
+                  <a href="#">Skype</a>
+                  <a href="#">Cell/Email</a>
+                </div>
+              </div>
         </div>
     </section>
 
