--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
-            <div class="dropdown">
+            <div class="resume-button">
                 <button onclick="myFunction()" class="dropbtn">Contact Me</button>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">Linkedin</a>
