--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="script" href="script.js">
+    <script src="script.js"></script>
     <title>Ethan Biekert</title>
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
 </head>
