--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
             <div class="dropdown">
-                <a onclick="myFunction()" class="resume-button">Contact Me</a>
+                <a onclick=dropdownfunction() class="resume-button">Contact Me</a>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">Linkedin</a>
                   <a href="#">Instagram</a>
