--- a/Home.html
+++ b/Home.html
@@ -23,19 +23,19 @@
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
             <div class="dropdown">
-                <button onclick="dropdownfunction()" class="resume-button">Contact Me</button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="#">Linkedin</a>
-                  <a href="#">Instagram</a>
-                  <a href="#">Indeed</a>
-                  <a href="#">Skype</a>
-                  <a href="#">Cell/Email</a>
-                </div>
-              </div>
+    <button onclick="toggleDropdown()" class="resume-button">Contact Me</button>
+    <div id="myDropdown" class="dropdown-content">
+        <a href="#">Linkedin</a>
+        <a href="#">Instagram</a>
+        <a href="#">Indeed</a>
+        <a href="#">Skype</a>
+        <a href="#">Cell/Email</a>
+    </div>
+</div>
+
         </div>
     </section>
 
     
 </body>
 </html>
-
