--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <a href="Resume.pdf" download class="resume-button">Download Resume</a>
             <div class="dropdown">
-    <button onclick="toggleDropdown()" class="resume-button">Contact Me</button>
+    <a onclick="toggleDropdown()" class="resume-button">Contact Me</a>
     <div id="myDropdown" class="dropdown-content">
         <a href="#">Linkedin</a>
         <a href="#">Instagram</a>
