--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
-            <a href="Resume.pdf" download class="resume-button">Download Resume</a>
+            <a onclick="toggleDropdown()" class="resume-button">Download Resume</a>
             <div class="dropdown">
     <a onclick="toggleDropdown()" class="resume-button">Contact Me</a>
     <div id="myDropdown" class="dropdown-content">
