--- a/Home.html
+++ b/Home.html
@@ -20,12 +20,12 @@
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <div class="dropdown">
                 <button onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</button>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="#">PDF</a>
-                    <a href="#">Word</a>
-                    <a href="#">Text</a>
+                    <a href="Resume.pdf" downlad class="resume-button">PDF</a>
+                    <a href="Resume.docx" downlad class="resume-button">Docx</a>
                 </div>
             </div>
             <div class="dropdown">
