--- a/Home.html
+++ b/Home.html
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <button onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</button>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="Resume.pdf" downlad class="resume-button">PDF</a>
-                    <a href="Resume.docx" downlad class="resume-button">Docx</a>
+                    <a href="Resume.pdf" downlad>PDF</a>
+                    <a href="Resume.docx" downlad>Docx</a>
                 </div>
             </div>
             <div class="dropdown">
