--- a/Home.html
+++ b/Home.html
@@ -22,14 +22,15 @@
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <div class="dropdown">
-                <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
+                <button onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</button>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="Resume.pdf" downlad>PDF</a>
-                    <a href="Resume.docx" downlad>Docx</a>
+                    <a href="#">Resume Option 1</a>
+                    <a href="#">Resume Option 2</a>
+                    <a href="#">Resume Option 3</a>
                 </div>
             </div>
             <div class="dropdown">
-                <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
+                <button onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</button>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="#">Linkedin</a>
                     <a href="#">Instagram</a>
