--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
             <h2>Software Engineer - Web Designer - Student</h2>
             <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <div class="dropdown">
-                <button onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</button>
+                <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
                     <a href="#">Resume Option 1</a>
                     <a href="#">Resume Option 2</a>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="dropdown">
-                <button onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</button>
+                <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="#">Linkedin</a>
                     <a href="#">Instagram</a>
