--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team..</p>
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
