--- a/Home.html
+++ b/Home.html
@@ -24,15 +24,14 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="#">Resume Option 1</a>
-                    <a href="#">Resume Option 2</a>
-                    <a href="#">Resume Option 3</a>
+                    <a href="Resume.docx" download>Resume.Docx</a>
+                    <a href="Resume.pdf" download>Resume.PDF</a>
                 </div>
             </div>
             <div class="dropdown">
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
-                    <a href="#">Linkedin</a>
+                    <a url="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
                     <a href="#">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
