--- a/Home.html
+++ b/Home.html
@@ -37,6 +37,17 @@
                     <a href="#">Skype</a>
                     <a href="#">Cell/Email</a>
                 </div>
+                <a href="expirence.html" class="resume-button">Work Expirence</a>
+                <a href="certifications.html" class="resume-button">Certifications</a>
+                <a href="education.html" class="resume-button">Education</a>
+                <a href="accomplishments.html" class="resume-button">Accomplishments</a>
+            <div class="dropdown">
+                <a onclick="toggleDropdown('impactdropdown')" class="resume-button">Impact</a>
+                <div id="impactdropdown" class="dropdown-content">
+                    <a href="cs.html">Community Service</a>
+                    <a href="recomendations.html">Recomendations</a>
+                    <a href="references.html">References</a>
+                </div>
             </div>
         </div>
     </section>
