--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team..</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
@@ -37,7 +37,7 @@
                     <a href="#">Skype</a>
                     <a href="#">Cell/Email</a>
                 </div>
-                <a href="expirence.html" class="resume-button">Work Expirence</a>
+                <a href="experience.html" class="resume-button">Work Expirence</a>
                 <a href="certifications.html" class="resume-button">Certifications</a>
                 <a href="education.html" class="resume-button">Education</a>
                 <a href="accomplishments.html" class="resume-button">Accomplishments</a>
