Contact Info Update

--- a/Home.html
+++ b/Home.html
@@ -35,7 +35,7 @@
                     <a href="#">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
-                    <a href="#">Cell/Email</a>
+                    <a href="Cell.html">Cell/Email</a>
                 </div>
                 <a href="experience.html" class="resume-button">Work Expirence</a>
                 <a href="certifications.html" class="resume-button">Certifications</a>
