Cell Format Patch

--- a/Cell.html
+++ b/Cell.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <title>Contact Me</title>
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
+    <style>
+        .headings-container {
+            display:flex;
+            justify-content: space-between;
+        }
+        .CellNumStyl, .ContactDivider, .EmailStyl {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <div id="background-image"></div>
@@ -18,10 +27,11 @@
     
     <section id="main-banner" class="container">
         <div class="description">
-            <h2 class="CellNumStyl">Cell</h2>
-            <h2 class="ContactDivider">|</h2>
-            <h2 class="EmailStyl">Emails</h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
+            <div class="headings-container">
+                <h2 class="CellNumStyl">Cell</h2>
+                <h2 class="ContactDivider">|</h2>
+                <h2 class="EmailStyl">Emails</h2>
+            </div>
         </div>
     </section>
 
