--- a/Cell.html
+++ b/Cell.html
@@ -13,7 +13,7 @@
             justify-content: space-between;
         }
         .CellNumStyl, .ContactDivider, .EmailStyl {
-            margin: 0;
+            /*margin: 0;*/
         }
     </style>
 </head>
