Contact info update

--- a/Cell.html
+++ b/Cell.html
@@ -15,6 +15,13 @@
         .CellNumStyl, .ContactDivider, .EmailStyl {
             margin: 0 70px;                      
         }
+        .contactinfo-container{
+            display: flex;
+            justify-content: space-between;
+        }
+        .cellnum, .email1, .email2{
+            margin: 3px 70px;
+        }
     </style>
 </head>
 <body>
@@ -31,6 +38,10 @@
                 <h2 class="CellNumStyl">Cell</h2>
                 <h2 class="ContactDivider">|</h2>
                 <h2 class="EmailStyl">Emails</h2>
+            </div>
+            <div class="contactinfo-container">
+                <p>+1 (610) 310-0122</p>
+                <p>BiekertFreelance@gmail.com</p>
             </div>
         </div>
     </section>
