update html to button

--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
-                    <a id="instabtn">Instagram</a>
+                    <button id="instabtn">Instagram</button>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
                     <a href="Cell.html">Cell/Email</a>
