I forgot the parenthases :(

--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
     </header>
     <div id="instamodal" class="modal">
         <div class="modal-content">
-            <span onclick="modelclose"class="close">&times;</span>
+            <span onclick="modelclose()"class="close">&times;</span>
             <p>Some text in the Modal.</p>
           </div>
         </div>
@@ -38,7 +38,7 @@
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
-                    <a onclick="modalopen"id="instabtn">Instagram</a>
+                    <a onclick="modalopen()"id="instabtn">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
                     <a href="Cell.html">Cell/Email</a>
