--- a/Home.html
+++ b/Home.html
@@ -16,13 +16,6 @@
             <h1><a href="Home.html">Ethan Biekert</a></h1>
         </div>
     </header>
-    <div id="instamodal" class="modal">
-        <div class="modal-content">
-            <span onclick="modelclose()"class="close">&times;</span>
-            <p>Some text in the Modal.</p>
-          </div>
-        </div>
-    </div>
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
@@ -38,7 +31,7 @@
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
-                    <a onclick="modalopen()"id="instabtn">Instagram</a>
+                    <a href="#">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
                     <a href="Cell.html">Cell/Email</a>
