--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,37 @@
     <script src="./script.js"></script>
     <title>Ethan Biekert</title>
     <link rel="icon" href="WebsiteIcon.png" type="image/png">
+    <style>
+        .popup {
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            display: none;
+        }
+        .popup-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888888;
+            width: 30%;
+            font-weight: bolder;
+        }
+        .popup-content button {
+            display: block;
+            margin: 0 auto;
+        }
+        .show {
+            display: block;
+        }
+        h1 {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <div id="background-image"></div>
@@ -31,7 +62,9 @@
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
-                    <a href="#">Instagram</a>
+                    <button id="myButton">
+                        Click me
+                    </button>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
                     <a href="Cell.html">Cell/Email</a>
@@ -50,7 +83,31 @@
             </div>
         </div>
     </section>
-
+    <div id="myPopup" class="popup">
+        <div class="popup-content">
+            <h1 style="color:green;">
+                  GeekforGeeks !
+              </h1>
+            <p>This is a popup box!</p>
+            <button id="closePopup">
+                  Close
+              </button>
+        </div>
+    </div>
+ 
+    <script>
+        myButton.addEventListener("click", function () {
+            myPopup.classList.add("show");
+        });
+        closePopup.addEventListener("click", function () {
+            myPopup.classList.remove("show");
+        });
+        window.addEventListener("click", function (event) {
+            if (event.target == myPopup) {
+                myPopup.classList.remove("show");
+            }
+        });
+    </script>
 </body>
 </html>
 
