--- a/Home.html
+++ b/Home.html
@@ -56,6 +56,20 @@
             <a id="closePopup">Close</a>
         </div>
     </div>
+    <script>
+
+myButton.addEventListener("click", function () {
+    myPopup.classList.add("show");
+});
+closePopup.addEventListener("click", function () {
+    myPopup.classList.remove("show");
+});
+window.addEventListener("click", function (event) {
+    if (event.target == myPopup) {
+        myPopup.classList.remove("show");
+    }
+});
+    </script>
 </body>
 </html>
 
