--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
                 <a onclick="toggleDropdown('contactDropdown')" class="resume-button">Contact Me</a>
                 <div id="contactDropdown" class="dropdown-content">
                     <a href="https://www.linkedin.com/in/kevin-biekert-736939260/">Linkedin</a>
-                    <a id="myButton">Click me</a>
+                    <a id="myButton">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
                     <a href="Cell.html">Cell/Email</a>
@@ -53,7 +53,7 @@
     <div id="myPopup" class="popup">
         <div class="popup-content">
             <p>Instagram QR</p>
-            <a id="closePopup" class="resume-button">Close</a>
+            <a id="closePopup" class="resume-button" style="align-items: center;">Close</a>
         </div>
     </div>
     <script>
