--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
     </section>
     <div id="myPopup" class="popup">
         <div class="popup-content">
-            <div class="qr-container"></div>
+            <div id="qr-container"></div>
             <a id="closePopup" class="resume-button" style="align-items: center;">Close</a>
         </div>
     </div>
