--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
     </section>
     <div id="myPopup" class="popup">
         <div class="popup-content">
-            <img src="instaqr.png" alt="Instagram QR Code">
+            <img src="instaqr.png" alt="Instagram QR Code" styel="align-items: center;">
             <a id="closePopup" class="resume-button" style="align-items: center;">Close</a>
         </div>
     </div>
