--- a/Home.html
+++ b/Home.html
@@ -52,8 +52,8 @@
     </section>
     <div id="myPopup" class="popup">
         <div class="popup-content">
-            <img src="instaqr.png" alt="Instagram QR Code" style="align-items: center;">
-            <a id="closePopup" class="resume-button" style="margin: 5 0">Close</a>
+            <img src="instaqr.png" alt="Instagram QR Code" id="instagramQR">
+            <a id="closePopup" class="resume-button">Close</a>
         </div>
     </div>
     <script>
