--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
     </section>
     <div id="myPopup" class="popup">
         <div class="popup-content">
-            <img src="instaqr.png" alt="Instagram QR Code" id="instagramQR">
+            <div id="qr-container"></div>
             <a id="closePopup" class="resume-button">Close</a>
         </div>
     </div>
