--- a/HomeJv.html
+++ b/HomeJv.html
@@ -12,8 +12,8 @@
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="Homejv.html">Ethan Biekert</a></h1>
-            <h3><a href="Home.html">English</a></h3>
+            <h1><a href="HomeJv.html">Ethan Biekert</a></h1>
+            <a href="Home.html">English</a>
         </div>
     </header>
     <section id="main-banner" class="container">
