Comunity Service Page

--- a/HomeJv.html
+++ b/HomeJv.html
@@ -13,7 +13,7 @@
     <header id="top-banner">
         <div class="container">
             <h1><a href="HomeJv.html">Ethan Biekert</a></h1>
-            <a href="Home.html">English</a>
+            <h1><a href="Home.html">English</a></h1>
         </div>
     </header>
     <section id="main-banner" class="container">
