--- a/Home.html
+++ b/Home.html
@@ -14,13 +14,13 @@
     <header id="top-banner">
         <div class="container">
             <h1><a href="Home.html">Ethan Biekert</a></h1>
-            <a href="HomeJv.html">日本人</a>
+            <h1><a href="HomeJv.html">日本人</a></h1>
         </div>
     </header>
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Software Engineer - Web Designer - Student</h2>
-            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team..</p>
+            <p>Hello! My name is Ethan Biekert, as you continue to explore my website you will learn who I am and my qualifications to lead your team.</p>
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
