--- a/cs.html
+++ b/cs.html
@@ -1,1 +1,35 @@
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="./script.js"></script>
+    <title>Ethan Biekert</title>
+    <link rel="icon" href="WebsiteIcon.png" type="image/png">
+</head>
+<body>
+    <div id="background-image"></div>
+    <header id="top-banner">
+        <div class="container">
+            <h1><a href="Home.html">Ethan Biekert</a></h1>
+            <h1><a href="HomeJv.html">日本人</a></h1>
+        </div>
+    </header>
+    <section id="main-banner" class="container">
+        <div class="description">
+            <h2>Total Comunity Service: 50 Hours</h2>
+            <div class="dropdown">
+                <a onclick="toggleDropdown('csDropdown')" class="resume-button">Comunity Service Documentation</a>
+                <div id="csDropdown" class="dropdown-content">
+                   <a href="#" downlad>Play Lights Technicion</a>
+                    <a href="#" download>Play Spotlight</a>
+                    <a href="#" download>Play Stage Crew</a>
+                    <a href="#" download>Local Preschool Church Event</a>
+                    <a href="#" downlad>Local Little Leauge</a>
+                </div>
+            </div>
+</body>
+</html>
+
