--- a/cs.html
+++ b/cs.html
@@ -14,7 +14,7 @@
     <header id="top-banner">
         <div class="container">
             <h1><a href="Home.html">Ethan Biekert</a></h1>
-            <h3 class="JvEn"><a href="HomeJv.html">日本人</a></h3>
+            <h3><a href="HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
