End Section Tag

--- a/cs.html
+++ b/cs.html
@@ -30,6 +30,7 @@
                     <a href="#" downlad>Local Little Leauge</a>
                 </div>
             </div>
+    </section>
 </body>
 </html>
 
