Added seprate Container

--- a/cs.html
+++ b/cs.html
@@ -30,6 +30,8 @@
                     <a href="#" downlad>Local Little Leauge</a>
                 </div>
             </div>
+      </section>
+      <section id="main-banner" class="container">
             <div class="slideshow-container">
 
                 <!-- Full-width images with number and caption text -->
@@ -56,7 +58,7 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
               </div>
               <br>
-              
+      
               <!-- The dots/circles -->
               <div style="text-align:center">
                 <span class="dot" onclick="currentSlide(1)"></span>
@@ -93,7 +95,7 @@
                     dots[slideIndex-1].className += " active";
                     }
               </script>
-    </section>
+      </section>
 </body>
 </html>
 
