--- a/cs.html
+++ b/cs.html
@@ -17,6 +17,7 @@
             <h3><a href="HomeJv.html">日本人</a></h3>
         </div>
     </header>
+    <div class="body-container">    
     <section id="main-banner" class="container">
         <div class="description">
             <h2>Total Comunity Service: 50 Hours</h2>
@@ -31,7 +32,8 @@
                 </div>
             </div>
       </section>
-      <section id="main-banner" class="container">
+      <section class="container">
+        <div class="description">
             <div class="slideshow-container">
 
                 <!-- Full-width images with number and caption text -->
@@ -95,7 +97,9 @@
                     dots[slideIndex-1].className += " active";
                     }
               </script>
+        </div>
       </section>
+      </div>
 </body>
 </html>
 
