Realitive Path Updates

--- a/JvHtml/CellJv.html
+++ b/JvHtml/CellJv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/EnHtml/styles.css">
     <title>Contact Me</title>
     <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
     <style>
@@ -27,7 +27,7 @@
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="./Home.html">Ethan Biekert</a></h1>
+            <h1><a href="/JvHtml/HomeJv.html">Ethan Biekert</a></h1>
         </div>
     </header>
     
