--- a/EnHtml/Home.html
+++ b/EnHtml/Home.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="/EnHtml/styles.css">
+    <script src="/EnHtml/script.js"></script>
     <title>Ethan Biekert</title>
-    <link rel="icon" href="WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="Home.html">Ethan Biekert</a></h1>
-            <h3><a href="HomeJv.html">日本人</a></h3>
+            <h1><a href="/EnHtml/Home.html">Ethan Biekert</a></h1>
+            <h3><a href="/EnHtml/HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="Resume.docx" download>Resume.docx</a>
-                    <a href="Resume.pdf" download>Resume.pdf</a>
+                    <a href="/Resumes/Resume.docx" download>Resume.docx</a>
+                    <a href="/Resumes/Resume.pdf" download>Resume.pdf</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -35,18 +35,18 @@
                     <a id="myButton">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
-                    <a href="Cell.html">Cell/Email</a>
+                    <a href="/EnHtml/Cell.html">Cell/Email</a>
                 </div>
-                <a href="experience.html" class="resume-button">Work Expirence</a>
-                <a href="certifications.html" class="resume-button">Certifications</a>
-                <a href="education.html" class="resume-button">Education</a>
-                <a href="accomplishments.html" class="resume-button">Accomplishments</a>
+                <a href="/EnHtml/experience.html" class="resume-button">Work Expirence</a>
+                <a href="/EnHtml/certifications.html" class="resume-button">Certifications</a>
+                <a href="/EnHtml/education.html" class="resume-button">Education</a>
+                <a href="/EnHtml/accomplishments.html" class="resume-button">Accomplishments</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">Impact</a>
                 <div id="impactdropdown" class="dropdown-content">
-                    <a href="cs.html">Community Service</a>
-                    <a href="recomendations.html">Recomendations</a>
-                    <a href="references.html">References</a>
+                    <a href="/EnHtml/cs.html">Community Service</a>
+                    <a href="/EnHtml/recomendations.html">Recomendations</a>
+                    <a href="/EnHtml/references.html">References</a>
                 </div>
             </div>
         </div>
