--- a/EnHtml/accomplishments.html
+++ b/EnHtml/accomplishments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Education - Your Name</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <p>Your Degree - University/College Name - Graduation Year</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
 
