Link Tree Updates

--- a/EnHtml/Home.html
+++ b/EnHtml/Home.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/EnHtml/styles.css">
-    <script src="/EnHtml/script.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js"></script>
     <title>Ethan Biekert</title>
     <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
 </head>
@@ -13,8 +13,8 @@
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="/EnHtml/Home.html">Ethan Biekert</a></h1>
-            <h3><a href="/EnHtml/HomeJv.html">日本人</a></h3>
+            <h1><a href="./Home.html">Ethan Biekert</a></h1>
+            <h3><a href="./HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
@@ -35,18 +35,18 @@
                     <a id="myButton">Instagram</a>
                     <a href="#">Indeed</a>
                     <a href="#">Skype</a>
-                    <a href="/EnHtml/Cell.html">Cell/Email</a>
+                    <a href="./Cell.html">Cell/Email</a>
                 </div>
-                <a href="/EnHtml/experience.html" class="resume-button">Work Expirence</a>
-                <a href="/EnHtml/certifications.html" class="resume-button">Certifications</a>
-                <a href="/EnHtml/education.html" class="resume-button">Education</a>
-                <a href="/EnHtml/accomplishments.html" class="resume-button">Accomplishments</a>
+                <a href="./experience.html" class="resume-button">Work Expirence</a>
+                <a href="./certifications.html" class="resume-button">Certifications</a>
+                <a href="./education.html" class="resume-button">Education</a>
+                <a href="./accomplishments.html" class="resume-button">Accomplishments</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">Impact</a>
                 <div id="impactdropdown" class="dropdown-content">
-                    <a href="/EnHtml/cs.html">Community Service</a>
-                    <a href="/EnHtml/recomendations.html">Recomendations</a>
-                    <a href="/EnHtml/references.html">References</a>
+                    <a href="./cs.html">Community Service</a>
+                    <a href="./recomendations.html">Recomendations</a>
+                    <a href="./references.html">References</a>
                 </div>
             </div>
         </div>
