Link Tree Syntax update

--- a/EnHtml/Home.html
+++ b/EnHtml/Home.html
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="/Resumes/Resume.docx" download>Resume.docx</a>
-                    <a href="/Resumes/Resume.pdf" download>Resume.pdf</a>
+                    <a href="Resumes/Resume.docx" download>Resume.docx</a>
+                    <a href="Resumes/Resume.pdf" download>Resume.pdf</a>
                 </div>
             </div>
             <div class="dropdown">
