--- a/JvHtml/HomeJv.html
+++ b/JvHtml/HomeJv.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/EnHtml/styles.css">
-    <script src="/EnHtml/script.js"></script>
+    <link rel="stylesheet" href="EnHtml/styles.css">
+    <script src="EnHtml/script.js"></script>
     <title>Ethan Biekert (日本人)</title>
-    <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="Images/WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
             <h1><a href="./HomeJv.html">Ethan Biekert</a></h1>
-            <h3><a href="/EnHtml/Home.html">English</a></h3>
+            <h3><a href="EnHtml/Home.html">English</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
@@ -23,8 +23,8 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">履歴書のダウンロード</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="/Resumes/Resume.docx" download>レジュメ.docx</a>
-                    <a href="/Resumes/Resume.pdf" download>レジュメ.pdf</a>
+                    <a href="Resumes/Resume.docx" download>レジュメ.docx</a>
+                    <a href="Resumes/Resume.pdf" download>レジュメ.pdf</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -36,16 +36,16 @@
                     <a href="#">スカイプ</a>
                     <a href="./CellJv.html">セル/メール</a>
                 </div>
-                <a href="/EnHtml/experience.html" class="resume-button">職歴</a>
-                <a href="/EnHtml/certifications.html" class="resume-button">認証</a>
-                <a href="/EnHtml/education.html" class="resume-button">教育</a>
-                <a href="/EnHtml/accomplishments.html" class="resume-button">成果</a>
+                <a href="EnHtml/experience.html" class="resume-button">職歴</a>
+                <a href="EnHtml/certifications.html" class="resume-button">認証</a>
+                <a href="EnHtml/education.html" class="resume-button">教育</a>
+                <a href="EnHtml/accomplishments.html" class="resume-button">成果</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">インパクト</a>
                 <div id="impactdropdown" class="dropdown-content">
-                    <a href="/EnHtml/cs.html">社会奉仕</a>
-                    <a href="/EnHtml/recomendations.html">推奨 事項</a>
-                    <a href="/EnHtml/references.html">参照</a>
+                    <a href="EnHtml/cs.html">社会奉仕</a>
+                    <a href="EnHtml/recomendations.html">推奨 事項</a>
+                    <a href="EnHtml/references.html">参照</a>
                 </div>
             </div>
         </div>
