--- a/EnHtml/certifications.html
+++ b/EnHtml/certifications.html
@@ -14,7 +14,7 @@
         <p>Your Degree - University/College Name - Graduation Year</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
 
