--- a/EnHtml/cs.html
+++ b/EnHtml/cs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js"></script>
     <title>Ethan Biekert</title>
-    <link rel="icon" href="Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <div id="background-image"></div>
