--- a/EnHtml/Home.html
+++ b/EnHtml/Home.html
@@ -14,7 +14,7 @@
     <header id="top-banner">
         <div class="container">
             <h1><a href="./Home.html">Ethan Biekert</a></h1>
-            <h3><a href="JvHtml/HomeJv.html">日本人</a></h3>
+            <h3><a href="/JvHtml/HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="Resumes/Resume.docx" download>Resume.docx</a>
-                    <a href="Resumes/Resume.pdf" download>Resume.pdf</a>
+                    <a href="/Resumes/Resume.docx" download>Resume.docx</a>
+                    <a href="/Resumes/Resume.pdf" download>Resume.pdf</a>
                 </div>
             </div>
             <div class="dropdown">
