--- a/JvHtml/CellJv.html
+++ b/JvHtml/CellJv.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="EnHtml/styles.css">
+    <link rel="stylesheet" href="/EnHtml/styles.css">
     <title>Contact Me</title>
-    <link rel="icon" href="Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
     <style>
         .headings-container {
             display:flex;
@@ -28,7 +28,7 @@
     <header id="top-banner">
         <div class="container">
             <h1><a href="./HomeJv.html">Ethan Biekert</a></h1>
-            <h3><a href="EnHtml/Home.html">English</a></h3>
+            <h3><a href="/EnHtml/Home.html">English</a></h3>
         </div>
     </header>
     
