--- a/EnHtml/Home.html
+++ b/EnHtml/Home.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js"></script>
     <title>Ethan Biekert</title>
-    <link rel="icon" href="./Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="Images/WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
             <h1><a href="./Home.html">Ethan Biekert</a></h1>
-            <h3><a href="./JvHtml/HomeJv.html">日本人</a></h3>
+            <h3><a href="JvHtml/HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
