--- a/CellJv.html
+++ b/CellJv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Contact Me</title>
-    <link rel="icon" href="/Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="./WebsiteIcon.png" type="image/png">
     <style>
         .headings-container {
             display:flex;
@@ -27,7 +27,8 @@
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="./Home.html">Ethan Biekert</a></h1>
+            <h1><a href="./HomeJv.html">Ethan Biekert</a></h1>
+            <h3><a href="./EnHtml/Home.html">English</a></h3>
         </div>
     </header>
     
