--- a/Home.html
+++ b/Home.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js"></script>
     <title>Ethan Biekert</title>
-    <link rel="icon" href="Images/WebsiteIcon.png" type="image/png">
+    <link rel="icon" href="./WebsiteIcon.png" type="image/png">
 </head>
 <body>
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
             <h1><a href="./Home.html">Ethan Biekert</a></h1>
-            <h3><a href="JvHtml/HomeJv.html">日本人</a></h3>
+            <h3><a href="./HomeJv.html">日本人</a></h3>
         </div>
     </header>
     <section id="main-banner" class="container">
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('resumeDropdown')" class="resume-button">Download Resume</a>
                 <div id="resumeDropdown" class="dropdown-content">
-                    <a href="/Resumes/Resume.docx" download>Resume.docx</a>
-                    <a href="/Resumes/Resume.pdf" download>Resume.pdf</a>
+                    <a href="./Resume.docx" download>Resume.docx</a>
+                    <a href="./Resume.pdf" download>Resume.pdf</a>
                 </div>
             </div>
             <div class="dropdown">
