--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,7 @@
     <div id="myPopup" class="popup">
         <div class="popup-content">
             <div id="qr-container"></div>
-            <a id="closePopup" class="resume-button">Close</a>
+            <button id="closePopup" class="resume-button">Close</button>
         </div>
     </div>
     <script>
